# Energy-and-Carbon-Monitoring-in-High-Performance-Computing-HPC-Systems

./: .gitignore  Slurm模拟器内部结构剖析.md  install_linux_env.command  文献整理_碳强度与碳足迹计算方法.md  真实HPC_Workload模拟调研.md
FastSim/: .gitignore  LICENSE  README.md  requirements.txt  run_smoke_test.sh
FastSim/configs/: 4monthdata_baseline_conf.yaml  4monthdata_baseline_high200hpelong_conf.yaml  4monthdata_baseline_high224hpelong_conf.yaml  4monthdata_baseline_higherhpelong_conf.yaml  4monthdata_baseline_highhpelong_conf.yaml  4monthdata_baseline_hpelongonlydown_conf.yaml  4monthdata_baseline_hpelongpcextra_conf.yaml  4monthdata_baseline_hpelongtrue_conf.yaml  4monthdata_baseline_morehpelong_conf.yaml  4monthdata_lowagemax_conf.yaml  refactor_test_3monthdata_conf.yaml  refactor_test_3monthdata_slowerscheds_conf.yaml  refactor_test_conf.yaml  refactor_test_plus1_conf.yaml  refactor_test_slowscheds_conf.yaml
FastSim/configs/hpelongres_tests/: 3monthdata_highhpelongres_conf.yaml  3monthdata_highmedhpelongres_conf.yaml  3monthdata_lowhpelongres_conf.yaml  3monthdata_lowmedhpelongres_conf.yaml  3monthdata_med108hpelongres_conf.yaml  3monthdata_med112hpelongres_conf.yaml  3monthdata_medhpelongres_conf.yaml  3monthdata_nohpelongres_conf.yaml  3monthdata_superduperhpelongres_conf.yaml
FastSim/configs/lumi/: test_conf.yaml  test_duplicates_conf.yaml  test_duplicates_recent_conf.yaml  test_duplicates_recent_standard_conf.yaml  test_duplicates_standard_conf.yaml  test_tmpdata_conf.yaml  test_tmpdata_recent_conf.yaml  test_tmpdata_standardg_conf.yaml
FastSim/configs/stanage/: smoke_test_conf.yaml
FastSim/sample_data/: generate_sample.py
FastSim/sample_data/stanage_smoke/: sacct_jobs.csv  sacctmgr_assocs.csv  sacctmgr_events.csv  sacctmgr_qos.csv  sinfo_resv.csv  slurm.conf
FastSim/scheduler/: aux_funcs.py  config.py  controller.py  data_reader.py  fairshare.py  job_queue.py  main.py  partition.py  plotting.py  priority_sorters.py
FastSim/scripts/: slurm_dump.sh
simulator/: Slurm_Simulator_文献综述_学位论文素材.md  文献索引.md
slurm_simulator/: .dockerignore  .gitignore  Dockerfile.local-sim  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  run-sim.sh  run-stanage.sh
slurm_simulator/auxdir/: Makefile.in  x_ac_simulator.m4
slurm_simulator/contribs/: Makefile.in
slurm_simulator/contribs/cray/: Makefile.in
slurm_simulator/contribs/lua/: Makefile.in
slurm_simulator/contribs/nss_slurm/: Makefile.in
slurm_simulator/contribs/openlava/: Makefile.in
slurm_simulator/doc/: Makefile.in
slurm_simulator/etc/: Makefile.in
slurm_simulator/src/: Makefile.am  Makefile.in
slurm_simulator/src/slurmctld/: Makefile.am  Makefile.in  agent.c  controller.c  job_mgr.c  job_scheduler.c  proc_req.c  slurmctld.h  step_mgr.c
slurm_simulator/stanage-sim/: sim.events.realistic  workload_profile.csv
slurm_simulator/testsuite/: Makefile.in
slurm_simulator/workload-gen/: analyze_run.py  generate_workload.py
论文/: 文献索引.md
(+257 files in other folders)
